scrollbar isue fixed

--- a/src/app/admin/feedback/list-feedback/list-feedback.component.scss
+++ b/src/app/admin/feedback/list-feedback/list-feedback.component.scss
@@ -6,7 +6,6 @@
   height: 84%;
   overflow-y: scroll;
   overflow-x: hidden;
-  scrollbar-width: thin;
   scrollbar-color: #556080; 
 }
 
