--- a/src/app/admin/role/list-role/list-role.component.scss
+++ b/src/app/admin/role/list-role/list-role.component.scss
@@ -11,8 +11,7 @@
   .table-responsive {
     height: 84%;
     overflow-y: scroll;
-    scrollbar-width: thin;
-    scrollbar-color: #556080; 
+      scrollbar-color: #556080; 
   }
   
   .table-responsive::-webkit-scrollbar {
