--- a/src/app/admin/site/list-sites/list-sites.component.scss
+++ b/src/app/admin/site/list-sites/list-sites.component.scss
@@ -42,12 +42,10 @@
   font-size: 48px; 
 }
 
-
 .table-responsive {
   height: 84%;
   width: 100%;
   overflow-y: scroll;
-  scrollbar-width: thin;
   scrollbar-color: #556080; 
   padding-bottom: 2%;
 }
