--- a/src/app/admin/staff/list-staff/list-staff.component.scss
+++ b/src/app/admin/staff/list-staff/list-staff.component.scss
@@ -9,7 +9,6 @@
 .table-responsive {
   height: 84%;
   overflow-y: scroll;
-  scrollbar-width: thin;
   scrollbar-color: #556080; 
 }
 
