--- a/src/app/admin/table/list-table/list-table.component.scss
+++ b/src/app/admin/table/list-table/list-table.component.scss
@@ -5,7 +5,6 @@
 .table-responsive {
   height: 84%;
   overflow-y: scroll;
-  scrollbar-width: thin;
   scrollbar-color: #556080; 
 }
 
